...
      android:id="@+id/price_list_recyclerView"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:paddingBottom="@dimen/pricelist_padding_bottom"
      android:clipToPadding="false"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toTopOf="@id/setLocation"
      app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
      tools:context="com.goodrx.android.ui.activity.MainActivity"
      tools:listitem="@layout/price_list_items"
      />


...
